# django-graphql

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
djgql/: query_optimizer.py  settings.py  utils.py  views.py
djgql/auth/: __init__.py  backends.py  basic.py  decorator.py  middleware.py
djgql/auth/jwt/: __init__.py  settings.py  utils.py
examples/starwar/: manage.py
examples/starwar/starwar/: asgi.py  schema.py  settings.py  urls.py  utils.py  wsgi.py
tests/: conftest.py  models.py
